[tool.poetry]
name = "xbt-media-expert"
version = "0.1.0"
description = ""
authors = ["LONGYKING <kingsleyonyeneke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
langchain-groq = "^0.2.0"
langchain-openai = "^0.2.3"
langchain-community = "^0.3.3"
langchain-core = "^0.3.13"
langsmith = "^0.1.137"
langchain = "^0.3.4"
langgraph = "^0.2.39"
openai = "^1.52.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
